avoid scrollbars for embeddable report

--- a/src/client/views/components/Styles.scss
+++ b/src/client/views/components/Styles.scss
@@ -14,7 +14,7 @@ body,
 .app {
   height: 100%;
   margin: 0;
-  min-width: 800px;
+  // min-width: 800px;
   overflow: visible;
   overscroll-behavior: none;
   width: 100%;
